--- a/index.html
+++ b/index.html
@@ -1,57 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gambling Machine</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/images/images.png">
-</head>
-<body>
-    <h1>Gambling Machine</h1>
-
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="/images/images.png" />
+  </head>
+  <body>
+    <h1>Slot Machine</h1>
 
     <!-- Deposit Section -->
     <div id="depositSection">
-        <label for="depositAmount">Enter a deposit amount: </label>
-        <input type="number" id="depositAmount">
-        <button onclick="deposit()">Deposit</button>
+      <label for="depositAmount">Enter a deposit amount: </label>
+      <input type="number" id="depositAmount" />
+      <button onclick="deposit()">Deposit</button>
     </div>
 
     <div id="balanceDisplay" class="hidden">
-        <p id="balance">Balance: $0</p>
+      <p id="balance">Balance: $0</p>
     </div>
-    
+
     <div id="betSection" class="hidden">
-        <label for="numberOfLines">Enter the number of lines to bet on (1-3): </label>
-        <input type="number" id="numberOfLines">
-        <br>
-        <label for="betAmount">Enter the bet per line: </label>
-        <input type="number" id="betAmount">
-        <button onclick="placeBet()">Place Bet</button>
+      <label for="numberOfLines"
+        >Enter the number of lines to bet on (1-3):
+      </label>
+      <input type="number" id="numberOfLines" />
+      <br />
+      <label for="betAmount">Enter the bet per line: </label>
+      <input type="number" id="betAmount" />
+      <button onclick="placeBet()">Place Bet</button>
     </div>
     <div id="spinSection" class="hidden">
-        <button onclick="spin()">Spin!</button>
+      <button onclick="spin()">Spin!</button>
     </div>
     <div id="results" class="hidden">
-        <h2>Results</h2>
-        <div id="rows"></div>
-        <p id="winnings"></p>
+      <h2>Results</h2>
+      <div id="rows"></div>
+      <p id="winnings"></p>
     </div>
     <div id="playAgainSection" class="hidden">
-        <button onclick="playAgain()">Play Again</button>
+      <button onclick="playAgain()">Play Again</button>
     </div>
     <!-- Background music -->
     <audio id="background-music" autoplay loop>
-        <source src="music/x2mate.com - Las Vegas Casino Music Video_ For Night Game of Poker, Blackjack, Roulette Wheel & Slots (128 kbps).mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
+      <source
+        src="music/x2mate.com - Las Vegas Casino Music Video_ For Night Game of Poker, Blackjack, Roulette Wheel & Slots (128 kbps).mp3"
+        type="audio/mpeg"
+      />
+      Your browser does not support the audio element.
     </audio>
     <div id="otherControls">
-        <!-- Show Deposit Section Button -->
-        <button id="showDepositButton" class="hidden" onclick="toggleDepositSection()">Show/Hide Deposit Section</button>
-        <button id="toggleMusicButton" onclick="toggleMusic()">Play/Stop Music</button>
-    </div>    
+      <!-- Show Deposit Section Button -->
+      <button
+        id="showDepositButton"
+        class="hidden"
+        onclick="toggleDepositSection()"
+      >
+        Show/Hide Deposit Section
+      </button>
+      <button id="toggleMusicButton" onclick="toggleMusic()">
+        Play/Stop Music
+      </button>
+    </div>
 
-    <script src="index.js"></script>
-</body>
+    <script src="index.js">
+
+      document.addEventListener('keydown', function (e) {
+        // F12
+        if (e.key === 'F12') {
+          e.preventDefault();
+        }
+
+        // Ctrl+Shift+I
+        if (e.ctrlKey && e.shiftKey && e.key.toLowerCase() === 'i') {
+          e.preventDefault();
+        }
+
+        // Ctrl+Shift+C
+        if (e.ctrlKey && e.shiftKey && e.key.toLowerCase() === 'c') {
+          e.preventDefault();
+        }
+
+        // Ctrl+Shift+J
+        if (e.ctrlKey && e.shiftKey && e.key.toLowerCase() === 'j') {
+          e.preventDefault();
+        }
+
+        // Ctrl+U (view source)
+        if (e.ctrlKey && e.key.toLowerCase() === 'u') {
+          e.preventDefault();
+        }
+      });
+
+      (function() {
+        const threshold = 160;
+        let devtools = false;
+
+        setInterval(() => {
+          const widthThreshold = window.outerWidth - window.innerWidth > threshold;
+          const heightThreshold = window.outerHeight - window.innerHeight > threshold;
+          if (widthThreshold || heightThreshold) {
+            if (!devtools) {
+              devtools = true;
+              alert('DevTools are open. Please close them to continue.');
+              // Optionally redirect or close tab
+              // window.location.href = 'about:blank';
+            }
+          } else {
+            devtools = false;
+          }
+        }, 1000);
+      })();
+    </script>
+  </body>
 </html>
