--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gambling Machine</title>
+    <title>ZapSpin</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./images/images.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lilita+One&display=swap" rel="stylesheet">
+    <!--Google Ads-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9464567962741140"
+     crossorigin="anonymous"></script>
 
   </head>
   <body>
