--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZapSpin</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mobile-style.css" />
     <link rel="icon" href="./images/images.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
