--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
       <button onclick="playAgain()">Play Again</button>
     </div>
     <!-- Background music -->
-    <audio id="background-music" autoplay loop>
+    <audio id="background-music" loop>
       <source
         src="music/x2mate.com - Las Vegas Casino Music Video_ For Night Game of Poker, Blackjack, Roulette Wheel & Slots (128 kbps).mp3"
         type="audio/mpeg"
